2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolbp/lbp.cpp: Fix code style nits.
	(main): Use standard C library symbols `EXIT_SUCCESS` and
	`EXIT_FAILURE` instead of integer literals as arguments to
	`exit()`.  Add assertion.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grotty/tty.cpp: Alter usage message handling.
	(usage): Summarize purpose of program and steer reader to man
	page (only) if help was explicitly requested, and exit
	successfully from here...
	(main): ...instead of calling scope.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grotty/tty.cpp: Fix code style nits.
	(main): Use standard C library symbols `EXIT_SUCCESS` and
	`EXIT_FAILURE` instead of integer literals as arguments to
	`exit()`.  Replace `assert(0)` call with communicative
	predicate.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Alter usage message handling.
	(synopsis, help): Coalesce these two functions...
	(usage): ...into this one.  Summarize purpose of program and
	steer reader to man page only if help was explicitly requested,
	rather than blitzing user with text upon a usage error.  Also
	drop option summary from usage message, as it duplicates
	groff(1).

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl: Alter usage message handling.
	(help): Rename this subroutine...
	(usage): ...to this.  Summarize purpose of program and steer
	reader to man page only if help was explicitly requested, rather
	than blitzing user with text upon a usage error.  Also drop
	option summary from usage message, as it duplicates grog(1).

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl: Drop relic code and comments.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grog]: Migrate expansion of Perl interpreter in shebang.